--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -39,8 +39,15 @@
                                     placeholder="Password">
                             </div>
                             
-
-                            <button type="submit" class="btn btn-info btn-round">Submit</button>
+                            <div class="mt-4">
+                                    
+                                <div class="d-flex links">
+                                    Don't have an account? <a href="/signup" class="ml-2">Sign Up</a>
+                                    
+                                </div>
+                                <button type="submit" class="btn btn-info btn-round">Submit</button>
+                            </div>
+                            
                         </form>
                     </div>
                 </div>
