--- a/public/views/signup.ejs
+++ b/public/views/signup.ejs
@@ -45,8 +45,15 @@
                                     placeholder="Password">
                             </div>
                             
-
-                            <button type="submit" class="btn btn-info btn-round">Submit</button>
+                            <div class="mt-4">
+                                    
+                                    <div class="d-flex  links">
+                                        Have an account? <a href="/" class="ml-2">Login</a>
+                                        
+                                    </div>
+                                    <button type="submit" class="btn btn-info btn-round">Submit</button>
+                                </div>
+                            
                         </form>
                     </div>
                 </div>
